Correct swagger comments
