# InventoryService/cmd/docs/swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/ingridient": {
             "put": {
-                "description": "Add new ingridient to database",
+                "description": "Change ingridient in the database by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,7 +20,7 @@
                 "summary": "Changes ingridient information",
                 "parameters": [
                     {
-                        "description": "Item and it's data data",
+                        "description": "Item id and it's new data",
                         "name": "item",
                         "in": "body",
                         "required": true,
@@ -30,8 +30,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "202": {
+                        "description": "Accepted"
                     }
                 }
             },
@@ -59,16 +59,13 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "201": {
+                        "description": "Created"
                     }
                 }
             },
             "delete": {
-                "description": "Add new ingridient to database",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Delete ingridient from database by id",
                 "produces": [
                     "application/json"
                 ],
@@ -84,18 +81,15 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "202": {
+                        "description": "Accepted"
                     }
                 }
             }
         },
         "/ingridient/search": {
             "get": {
-                "description": "Get complete list of all ingridients availible for user",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Get list of ingridients filtering by it's name and/or parameters",
                 "produces": [
                     "application/json"
                 ],
@@ -135,9 +129,6 @@
         "/inventory": {
             "get": {
                 "description": "Get complete list of all ingridients availible for user",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
